--- a/views/index.jade
+++ b/views/index.jade
@@ -3,3 +3,9 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+  form(name="input", action="/", method="post")
+    | Title:
+    input(type="text", name="title",required="required")
+    | Vision:
+    input(type="text", name="vision",required="required")
+    input(type="submit", value="Submit")
