--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -1,11 +1,54 @@
 @import 'susy';
+// border-box-sizing()
+@include border-box-sizing;
 
-body {
+
+// Silent extendebals
+%no-liststyle {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.page {
   @include container;
   @include susy-grid-background;
 }
 
 .page-title {
-  color: red;
-  @include span-columns(3)
+  
+  @include span-columns(12,12);
+  text-align: center;
+}
+
+.strategy-description {
+  text-align: center;
+}
+
+.goal {
+  @include span-columns(6,12);
+  @extend %no-liststyle;
+  border: 1px solid #dedede;
+  background-color: #f3f3f3;
+  padding: 2em;
+  margin-bottom: 2em;
+
+  &.even {
+    @include omega;
+  }
+}
+
+.goal-title {
+  font-size: 1.5em;
+  line-height: 1.4em;
+}
+
+.action {
+  @include span-columns(12,12);
+  @extend %no-liststyle;
+
+  .title {
+    font-size: 1.2em;
+    line-height: 1.3em;
+  }
 }
