--- a/views/strategy.jade
+++ b/views/strategy.jade
@@ -7,3 +7,23 @@ block content
 		| Goal:
 		input(type="text", name="goal",required="required")
 		input(type="submit", value="Submit")
+
+  div.page
+    h1.page-title.strategy-title Growing my company into a Fortune 500
+    p.description.strategy-description I want to own a company that is bigger than my neighbour's, so I can brag about it when we BBQ.
+    ul.goal
+      li
+        h1.title.goal-title Hire 99 excellent sellers
+        ul.action
+          li
+            h1.title Call my friends to check if they want to work there.
+            p.description I don't have a company yet.
+            div.date 17.12.1012
+    ul.goal.even
+      li
+        h1.title.goal-title Hire 99 excellent sellers
+        ul.action
+          li
+            h1.title Call my friends to check if they want to work there.
+            p.description I don't have a company yet.
+            div.date 17.12.1012
