Add link to strategies on start page

--- a/views/index.jade
+++ b/views/index.jade
@@ -8,3 +8,5 @@ block content
     | Vision:
     input(type="text", name="vision",required="required")
     input(type="submit", value="Submit")
+   a(href='/strategies' )  View all strategies
+
