--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,8 +2,8 @@ doctype 5
 html
 	head
 		title= title
-		link(rel='stylesheet', href='stylesheets/style.css')
-		link(rel='stylesheet', href='stylesheets/bootstrap.css')
+		link(rel='stylesheet', href='/stylesheets/style.css')
+		link(rel='stylesheet', href='/stylesheets/bootstrap.css')
 
 	body
 		block content
