--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -10,7 +10,8 @@ $grayLighter: #f3f3f3;
 
 .goal {
   background: $grayLighter;
-  padding: 2em;
+  // padding: 2em;
+  margin-bottom: 2em;
 }
 
 .goal-title {
