Too many changes to mention

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,4 +6,7 @@ html
 		link(rel='stylesheet', href='/stylesheets/bootstrap.css')
 
 	body
+		p.pagination-centered 
+			a( href="/strategies") See all Strategies |
+			a( href="/deleteall") Delete All Data 
 		block content
