--- a/views/index.jade
+++ b/views/index.jade
@@ -1,12 +1,13 @@
 extends layout
 
 block content
-  h1= title
-  form(name="input", action="/", method="post")
-    | Title:
-    input(type="text", name="title",required="required")
-    | Vision:
-    input(type="text", name="vision",required="required")
-    input(type="submit", value="Submit")
-   a(href='/strategies' )  View all strategies
+  .container
+    h1= title
+    form(name="input", action="/", method="post")
+      | Title:
+      input(type="text", name="title",required="required")
+      | Vision:
+      input(type="text", name="vision",required="required")
+      input(type="submit", value="Submit")
+     a(href='/strategies' )  View all strategies
 
